TM fix placeholders

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	</head>
 	<body>
 		<h1>hello, world</h1>
+		<!-- Fix trademark even though it works fine -->
 		<a href="about.html">About this project</a>
 		<p>Call me Braeden.</p>
 
