Fix trademark even tho it worked fine

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<title>A whale of a greeting</title>
+		<meta charset="utf-8">
 	</head>
 	<body>
 		<h1>hello, world</h1>
-		<!-- Fix trademark even though it works fine -->
 		<a href="about.html">About this project</a>
 		<p>Call me Braeden.</p>
 
